--- a/share/po/zh_cn.po
+++ b/share/po/zh_cn.po
@@ -93,13 +93,17 @@ msgstr "%1 至"
 msgid "(any)"
 msgstr "(任意)"
 
-#: lib/Jifty/Web/Form/Field.pm:549
+#: lib/Jifty/Web/Form/.Field.pm.swp:44 lib/Jifty/Web/Form/Field.pm:549
 msgid "@{[$self->current_value]}"
 msgstr ""
 
 #: share/web/templates/__jifty/admin/index.html:19
 msgid "Actions"
 msgstr "操作"
+
+#: share/web/templates/_elements/nav:5
+msgid "Administration"
+msgstr "管理接口"
 
 #: share/web/templates/_elements/wrapper:11
 msgid "Administration mode is enabled."
@@ -125,6 +129,10 @@ msgstr "回到管理界面"
 msgid "Back to the application"
 msgstr "回到应用程序"
 
+#: share/web/templates/__jifty/halo:117
+msgid "Bindings"
+msgstr "快速键"
+
 #: share/web/templates/helpers/calendar.html:4
 #. (_ &><body class="calpopup"><a href="#" onclick="window.close()
 msgid "Calendar"
@@ -133,6 +141,10 @@ msgstr "日历"
 #: share/web/templates/__jifty/admin/fragments/list/update:31
 msgid "Cancel"
 msgstr "取消"
+
+#: share/web/templates/__jifty/halo:81
+msgid "Children"
+msgstr "子组件"
 
 #: share/web/templates/helpers/calendar.html:4
 msgid "Close window"
@@ -175,7 +187,7 @@ msgstr "关闭"
 msgid "Done?"
 msgstr "已完成？"
 
-#: share/web/templates/__jifty/admin/fragments/list/view:40
+#: share/web/templates/__jifty/admin/fragments/list/view:40 share/web/templates/__jifty/halo:20
 msgid "Edit"
 msgstr "编辑"
 
@@ -192,6 +204,10 @@ msgstr "回到首页..."
 #. ($u->$method()
 msgid "Hiya, %1."
 msgstr "您好，%1。"
+
+#: share/web/templates/_elements/nav:3
+msgid "Home"
+msgstr "首页"
 
 #: share/web/templates/__jifty/admin/index.html:1
 msgid "Jifty Administrative Console"
@@ -238,7 +254,7 @@ msgstr "没有字段包含"
 msgid "No items found"
 msgstr "未找到记录"
 
-#: lib/Jifty/Web.pm:299
+#: lib/Jifty/Web.pm:300
 msgid "No request to handle"
 msgstr "没有可处理的请求"
 
@@ -246,12 +262,24 @@ msgstr "没有可处理的请求"
 msgid "Online Documentation"
 msgstr "线上文件"
 
+#: share/web/templates/_elements/nav:6
+msgid "Online docs"
+msgstr "线上文件"
+
 #: share/web/templates/__jifty/admin/fragments/list/list:80
 #. ($page, $collection->pager->last_page)
 msgid "Page %1 of %2"
 msgstr "第 %1 页, 共 %2 页"
 
-#: lib/Jifty/Record.pm:240 lib/Jifty/Record.pm:319 lib/Jifty/Record.pm:60
+#: share/web/templates/__jifty/halo:1
+msgid "Page info"
+msgstr "页面信息"
+
+#: share/web/templates/__jifty/halo:72
+msgid "Parent"
+msgstr "上层组件"
+
+#: lib/Jifty/Record.pm:264 lib/Jifty/Record.pm:343 lib/Jifty/Record.pm:68
 msgid "Permission denied"
 msgstr "权限不足"
 
@@ -262,6 +290,11 @@ msgstr "上一页"
 #:
 msgid "Record created"
 msgstr "成功建立记录."
+
+#: share/web/templates/__jifty/halo:69
+#. ($frame->{'render_time'})
+msgid "Rendered in %1s"
+msgstr "页面绘制时间: %1 秒"
 
 #: share/web/templates/__jifty/admin/action/dhandler:20
 msgid "Run the action"
@@ -303,7 +336,7 @@ msgstr "字段内容错误."
 msgid "The passwords you typed didn't match each other"
 msgstr "两组口令不匹配."
 
-#: lib/Jifty/Web.pm:362
+#: lib/Jifty/Web.pm:363
 msgid "There was an error completing the request.  Please try again later."
 msgstr "系统执行错误, 请稍候再试."
 
@@ -326,6 +359,10 @@ msgstr "重试一下"
 #: lib/Jifty/Action/Record/Update.pm:156
 msgid "Updated"
 msgstr "成功更新项目."
+
+#: share/web/templates/__jifty/halo:93
+msgid "Variables"
+msgstr "变項"
 
 #: share/web/templates/index.html:1
 msgid "Welcome to your new Jifty application"
@@ -355,3 +392,11 @@ msgstr "升序"
 #: share/web/templates/__jifty/admin/fragments/list/header:41
 msgid "desc"
 msgstr "降序"
+
+#: lib/Jifty/Manual/PageRegions.pod:188
+msgid "text of the link"
+msgstr "连结文字"
+
+#: lib/Jifty/Manual/PageRegions.pod:225
+msgid "text of the link that hides"
+msgstr "隐藏连结文字"
