lib/Jifty/Manual/TutorialRest.pod - quick overview of REST plugin lib/Jifty/Manual/Tutorial.pod     - link
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2791 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -487,6 +487,8 @@ Future tutorials include:
 
 =item * Web Services
 
+See L<Jifty::Manual::TutorialRest> for a quick overview.
+
 =item * Continuations in depth
 
 =item * Customized view (user-defined wrappers and css)
