* This commit fixes a self-reference from Jifty::Manual::TutorialRest   to itself, which is now fixed by this commit.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2798 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/TutorialRest.pod
+++ b/lib/Jifty/Manual/TutorialRest.pod
@@ -4,7 +4,7 @@ Jifty::Manual::TutorialRest - Web Services
 
 =head1 DESCRIPTION
 
-This builds on L<Jifty::Manual::TutorialRest>, so make sure you have a
+This builds on L<Jifty::Manual::Tutorial>, so make sure you have a
 running jifty that roughly resembles the step-by-step from there.
 
 =head1 SETUP
