--- a/AUTHORS
+++ b/AUTHORS
@@ -22,3 +22,4 @@ Yves Agostini <agostini@univ-metz.fr>
 Agent Zhang <agentzh@gmail.com>
 Pawel Murias <pmurias@woobling.org>
 Andrew Sterling Hanenkamp <sterling@hanenkamp.com>
+Edgar Whipple <jifty@misterwhipple.com>
