Added myself (Christian Ternus <ternus@mit.edu>) to the AUTHORS file.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2821 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -23,3 +23,4 @@ Agent Zhang <agentzh@gmail.com>
 Pawel Murias <pmurias@woobling.org>
 Andrew Sterling Hanenkamp <sterling@hanenkamp.com>
 Edgar Whipple <jifty@misterwhipple.com>
+Christian Ternus <ternus@mit.edu>
