* we use config.yml not jifty.yml
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2836 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -239,7 +239,7 @@ Save your model class.
 
 Ok. It's time to initialize MyWeblog's database. By default, Jifty sets up your
 application with the SQLite database engine.  If you'd rather use PostgreSQL or
-MySQL, you need to add some content to F<etc/jifty.yml>. (See L<Jifty::Config>
+MySQL, you need to add some content to F<etc/config.yml>. (See L<Jifty::Config>
 for a bit more information).
 
   # jifty schema --setup
