--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@ Edmund von der Burg <evdb@ecclestoad.co.uk>
 Yves Agostini <agostini@univ-metz.fr>
 Agent Zhang <agentzh@gmail.com>
 Pawel Murias <pmurias@woobling.org>
+Kevin Falcone <falcone@bestpractical.com>
 Andrew Sterling Hanenkamp <sterling@hanenkamp.com>
 Edgar Whipple <jifty@misterwhipple.com>
 Christian Ternus <ternus@mit.edu>
