added as an author
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2878 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -25,3 +25,4 @@ Kevin Falcone <falcone@bestpractical.com>
 Andrew Sterling Hanenkamp <sterling@hanenkamp.com>
 Edgar Whipple <jifty@misterwhipple.com>
 Christian Ternus <ternus@mit.edu>
+David Brunton <dbrunton@yahoo.com>
