files for debian ubuntu packaging
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2930 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jifty (0.700311-1) unstable; urgency=low
+
+  * New cpan release
+
+ -- AGOSTINI Yves <agostini@univ-metz.fr>  Fri,  9 Mar 2007 15:36:49 +0100
+
 jifty (0.70117-1) unstable; urgency=low
 
   * New cpan release
