--- a/plugins/AuthLDAPOnly/debian/changelog
+++ b/plugins/AuthLDAPOnly/debian/changelog
@@ -1,3 +1,9 @@
+libjifty-plugin-authldaponly-perl (0-2) unstable; urgency=low
+
+  * Jifty::Record schema 
+
+ -- AGOSTINI Yves <agostini@univ-metz.fr>  Fri,  9 Mar 2007 15:31:57 +0100
+
 libjifty-plugin-authldaponly-perl (0-1) unstable; urgency=low
 
   * Initial Release.
