--- a/plugins/Login/debian/changelog
+++ b/plugins/Login/debian/changelog
@@ -1,3 +1,9 @@
+libjifty-plugin-login-perl (0.01-6) unstable; urgency=low
+
+  * Jifty::Record schema
+
+ -- AGOSTINI Yves <agostini@univ-metz.fr>  Fri,  9 Mar 2007 15:30:21 +0100
+
 libjifty-plugin-login-perl (0.01-3) unstable; urgency=low
 
   * Add dependencies, update fr po
