* Updated the 'feeds' section in J:M::Cookbook to not lie about the way XML::Feed actually works.  Arguably it /should/ work the way we described ("your implementation is showing"), but fixing the docs was easier than submitting a patch to someone else's module.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2947 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Cookbook.pod
+++ b/lib/Jifty/Manual/Cookbook.pod
@@ -91,7 +91,8 @@ L<XML::Feed> to do this:
 
 And add this in F<MyApp/Dispatcher.pm> to make URI look prettier:
 
-    on qr{^/feed/(atom|rss|rss2)}, run {
+    # note the case of the feed types
+    on qr{^/feed/(Atom|RSS)}, run {
         set type => $1;
         show('/feed');
     };
