--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-jifty (0.700311-1) unstable; urgency=low
+ -- AGOSTINI Yves <agostini@univ-metz.fr>  Fri, 16 Mar 2007 18:22:23 +0100
 
-  * New cpan release
+jifty (0.700317-1) unstable; urgency=low
+
+  * merge with T::D branche
 
  -- AGOSTINI Yves <agostini@univ-metz.fr>  Fri,  9 Mar 2007 15:36:49 +0100
 
