exceedingly trivial fix (semantic noop), but it's a start
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3157 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -26,3 +26,4 @@ Andrew Sterling Hanenkamp <sterling@hanenkamp.com>
 Edgar Whipple <jifty@misterwhipple.com>
 Christian Ternus <ternus@mit.edu>
 David Brunton <dbrunton@yahoo.com>
+Marc Mims <marc@questright.com>
