Added section on dynamically created binary content in the cookbook
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3236 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -27,3 +27,4 @@ Edgar Whipple <jifty@misterwhipple.com>
 Christian Ternus <ternus@mit.edu>
 David Brunton <dbrunton@yahoo.com>
 Marc Mims <marc@questright.com>
+Alexander Klink <alech@cpan.org>
